--- a/doc_frontend/package.json
+++ b/doc_frontend/package.json
@@ -6,6 +6,7 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "autoprefixer": "^10.4.0",
+    "axios": "^1.11.0",
     "postcss": "^8.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
