--- a/doc_frontend/package.json
+++ b/doc_frontend/package.json
@@ -5,21 +5,25 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@vitejs/plugin-react": "^5.0.1",
     "autoprefixer": "^10.4.0",
     "axios": "^1.11.0",
+    "pdfjs-dist": "^5.4.54",
     "postcss": "^8.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.7.1",
-    "react-scripts": "5.0.1",
-    "tailwindcss": "^3.0.0"
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.0.0",
+    "tesseract.js": "^6.0.1",
+    "vite": "^7.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+}
+,
   "browserslist": {
     "production": [
       ">0.2%",
